feat: save and get design
